# EasyCrystallography

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test1.cif
.github/workflows/: build-docs.yaml  ci-testing.yaml  ci_pip.yaml  codeql-analysis.yml  ossar-analysis.yml  ossar.yml  pypi-publish.yml  python-ci.yaml  python-package.yml  python-publish.yml  release-drafter.yml  self_publish_alpha.yml  test-and-build.yaml  test-and-package.yaml  verify-pr-labels.yml
Examples/: PanelViews.ipynb  server.py
Examples/graphics/: structure_viewer.ipynb  structure_viewer.py  structure_viewer2.py
docs/: getting-started.md  index.md
docs/assets/stylesheets/: extra.css
docs/installation/: standard.md
docs/src/: conf.py  requirements.txt
docs/src/components/: spacegroup.rst
easyCrystallography/: __init__.py  index.ts  package-lock.json  package.json
easyCrystallography/Components/: AtomicDisplacement.py  Lattice.py  Site.py  SpaceGroup.py  Specie.py  Spin.py  Susceptibility.py  Twin.py  __init__.py  magnetism.py
easyCrystallography/Elements/: periodic_table.py
easyCrystallography/Structures/: Phase.py
easyCrystallography/Symmetry/: Bonding.py  SymOp.py  groups.py  tools.py
easyCrystallography/graphics/: __init__.py  crysvue.py
easyCrystallography/graphics/apps/: structure_viewer.py
easyCrystallography/graphics/bokeh_extensions/: index.ts  ngl_viewer.py  ngl_viewer.ts
easyCrystallography/graphics/core/: ngl.py
easyCrystallography/graphics/panel/: atoms.py  lattice.py  phase.py  spacegroup.py
easyCrystallography/io/: cif.py  cif_parser.py  parser.py  star.py  template.py
easyCrystallography/io/cif/: __init__.py  atoms.py  generic.py  lattice.py  spacegroup.py  structures.py  template.py
resources/scripts/: generate_html.py
src/easycrystallography/Components/: AtomicDisplacement.py  Displacement.py  Lattice.py  Site.py  SpaceGroup.py  Specie.py  Susceptibility.py
src/easycrystallography/Elements/: periodic_table.py
src/easycrystallography/Structures/: Phase.py
src/easycrystallography/Symmetry/: Bonding.py  functions.py
src/easycrystallography/io/: cif_parser.py  star.py  star_base.py
src/easycrystallography/io/cif/: atoms.py  lattice.py  spacegroup.py  structures.py  template.py
tests/unit_tests/Components/: test_Atoms.py  test_Lattice.py  test_Site.py  test_SpaceGroup.py  test_spin.py
tests/unit_tests/components/: test_Atoms.py  test_Lattice.py  test_Site.py  test_SpaceGroup.py
tests/unit_tests/io/: test_star.py
